--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
   <footer class="footer">
     <p>
-      © Diseño inspirado en Rockstar Games hecho por Jorge Cárdenas.
+      © Diseño inspirado en Rockstar Games hecho por Jorge Cárdenas 2025.
       
     </p>
   </footer>
@@ -439,4 +439,5 @@
 
 </body>
 </html>
+
 
